# ctc-hashcredit

./: .dockerignore  .env.example  .gitignore  AGENT.md  DEMO.md  DEPLOY.md  Dockerfile  Dockerfile.prover  HACKATHON.md  LOCAL.md  Makefile  PROJECT.md  PROMPT.md  README.md  SCENARIO.md  TECH.md  TECH_DISCORD.md  TICKET.md  TODO.md  TTS_SCRIPT.md  docker-compose.yml  foundry.toml  make_deck.py  package.json  railway.compose.yml  railway.toml  slither.config.json  vercel.json
.github/workflows/: test.yml
apps/web/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
apps/web/src/: App.css  (+2 more)
contracts/: BtcSpvVerifier.sol  CheckpointManager.sol  HashCreditManager.sol  LendingVault.sol  PoolRegistry.sol  RelayerSigVerifier.sol  RiskConfig.sol  TestnetMintableERC20.sol
contracts/interfaces/: ICheckpointManager.sol  IHashCreditManager.sol  ILendingVault.sol  IPoolRegistry.sol  IRiskConfig.sol  IVerifierAdapter.sol
contracts/lib/: BitcoinLib.sol
contracts/mocks/: MockERC20.sol  MockNoReturnERC20.sol  MockUSDT.sol  MockVerifier.sol  ReentrantToken.sol
deck/: DECK.md  HashCredit_PitchDeck.pptx  PITCH_SCRIPT_BILINGUAL.md  PITCH_SCRIPT_BILINGUAL.txt  PITCH_SCRIPT_EN_PRINT.txt  generate_deck.py
docs/: audit-checklist.md  gas-limits.md  provenance.md  threat-model.md
docs/adr/: 0001-btc-spv.md
docs/deploy/: RAILWAY.md
docs/guides/: DEPLOY.md  LOCAL.md  RAILWAY.md
docs/hackathon/: ADDITIONAL_QUESTION.md  FOLLOWUP_EMAIL.md  SUBMISSION_CHECKLIST.md  SUBMISSION_VALUES.template.md  TEAM_INFO.template.md  addresses.template.json
docs/process/: PROMPT.md  TICKET.md
docs/specs/: BTC_IDENTITY_BINDING.md  PROJECT.md  USC_ADAPTER.md
offchain/api/: .env.compose  .env.example  Dockerfile  Procfile  README.md  package.json  pyproject.toml  railway.toml
offchain/api/hashcredit_api/: __init__.py  address.py  auth.py  bitcoin.py  btc_indexer.py  btc_signmessage.py  claim.py  config.py  evm.py  main.py  models.py  proof.py
offchain/api/tests/: __init__.py  test_api.py  test_claim.py
offchain/relayer/: .dockerignore  Dockerfile  README.md  pyproject.toml
offchain/relayer/hashcredit_relayer/: __init__.py  __main__.py  bitcoin.py  cli.py  config.py  db.py  evm.py  relayer.py  signer.py
offchain/relayer/tests/: test_bitcoin_api_client.py  test_signer.py
script/: Deploy.s.sol  DeploySpv.s.sol  check_manager_mode.sh  demo_live_spv.sh
test/: BtcSpvVerifier.t.sol  CheckpointManager.t.sol  GasProfile.t.sol  HashCredit.t.sol  HashCreditManager.t.sol  LendingVault.t.sol  RelayerSigVerifier.t.sol  SafeERC20.t.sol  SpvE2E.t.sol
(+83 files in other folders)
